--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
 ul {
   padding: 0;
   margin: 0;
@@ -32,6 +33,10 @@ body {
   margin: 0;
   height: 100vh;
   overflow: hidden;
+}
+
+#root {
+  height: 100%;
 }
 
 .no-scrollbar {
